# H2_pt100

./: .gitignore  README.md
analysis/: pyproject.toml
analysis/board_calibration_runs/board#1/: calibration_data.tsv  pt100_board#1.ipynb  result.txt
analysis/board_calibration_runs/board#2/: calibration_data.tsv  pt100_board#2.ipynb  result.txt
app/: Cargo.toml  shell.nix
app/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
mcu-c3/: Cargo.toml  README.md  rust-toolchain.toml
mcu-c3/.cargo/: config.toml
mcu-c3/src/: main.rs
mcu-s3/: .gitignore  Cargo.toml  README.md
mcu-s3/.cargo/: config.toml
mcu-s3/schematic/pinout/: pinout.kicad_prl  pinout.kicad_pro  pinout.kicad_sch
mcu-s3/src/: main.rs
mcu-stm32g4/: Cargo.toml  README.md
mcu-stm32g4/.cargo/: config.toml
mcu-stm32g4/src/: main.rs
