[project]
name = "h2_lab_pt100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
