[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
serde-json-core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
serialport = "4.6"
chrono = "0.4"
anyhow = "1.0"