[package]
name = "mcu"
version = "0.1.0"
edition = "2024"

# without 'test = false', vscode shows an error
# https://github.com/rust-lang/vscode-rust/issues/729#issuecomment-1135449424
[[bin]]
name = "mcu"
test = false
bench = false

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.16.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-bootloader-esp-idf = "0.1.0"
esp-println = { version = "0.14.0", features = ["esp32s3"] }
critical-section = "1.2.0"
embedded-can = "0.4.1"
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
embedded-hal = "1.0.0"
anyhow = { version = "1.0.98", default-features = false }
heapless = "0.8.0"
esp-alloc = "0.8.0"
nb = "1.1.0"
