[package]
edition = "2021"
name = "pt100_stm32g4"
version = "0.1.0"

# without 'test = false', vscode shows an error
# https://github.com/rust-lang/vscode-rust/issues/729#issuecomment-1135449424
[[bin]]
name = "pt100_stm32g4"
test = false
bench = false

[dependencies]
common = { path = "../common" }
embassy-stm32 = { version = "0.3.0", features = [ "defmt", "time-driver-any", "stm32g431kb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

[profile.release]
debug = 2
